--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "files": [
     "/dist"
   ],
+  "scripts": {
+    "dev": "tsc -w"
+  },
   "repository": "git@github.com:wigy/react-interactive-stateful-process.git",
   "author": "Tommi Ronkainen <tommi.ronkainen@gmail.com>",
   "license": "GPL-2",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "typescript": "^4.2.3"
   }
 }
