--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "module": "esnext",
         "target": "es2015",
+        "esModuleInterop": true,
         "declaration": true,
         "outDir": "./dist"
     },
