Fix node module resolution.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "module": "esnext",
         "target": "es2015",
         "esModuleInterop": true,
+	"moduleResolution": "node",
         "declaration": true,
         "outDir": "./dist"
     },
