--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "module": "esnext",
         "target": "es2015",
         "esModuleInterop": true,
-	"moduleResolution": "node",
+        "strictNullChecks": true,
+        "moduleResolution": "node",
         "declaration": true,
         "outDir": "./dist"
     },
