--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
         "outDir": "./dist"
     },
     "include": [
-        "src/**/*"
+        "src/**/*",
+        "tests/**/*",
+        "migrations/**/*"
     ]
 }
