--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "interactive-stateful-process",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -8,8 +8,11 @@
   ],
   "scripts": {
     "dev": "tsc -w",
+    "build": "rm -rf dist/* && tsc && yarn run doc",
+    "doc": "rm -fr doc/* && typedoc --out doc src/index.ts",
     "test": "jest --forceExit --detectOpenHandles",
-    "lint": "echo \"\\033[0;31mNo linting system for interactive stateful process yet.\\033[0m\"",
+    "lint": "eslint src/*.ts tests/*.ts",
+    "lint:fix": "eslint --fix src/*.ts tests/*.ts",
     "test:watch": "jest --watch",
     "test:ci": "yarn run lint && yarn test"
   },
@@ -23,6 +26,19 @@
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/knex": "^0.16.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "better-docs": "^2.3.2",
+    "eslint": "^7.10.0",
+    "eslint-config-semistandard": "^15.0.1",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-mocha": "^8.0.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.25.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-tsdoc": "^0.2.11",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
