--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-tsdoc": "^0.2.11",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
+    "typedoc": "^0.22.6",
     "typescript": "^4.4.4"
   }
 }
