--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "dev": "tsc -w",
     "build": "rm -rf dist/* && tsc && yarn run doc",
     "doc": "rm -fr doc/* && typedoc --out doc src/index.ts",
+    "doc:watch": "typedoc --watch --out doc src/index.ts",
     "test": "jest --forceExit --detectOpenHandles",
     "lint": "eslint src/*.ts tests/*.ts",
     "lint:fix": "eslint --fix src/*.ts tests/*.ts",
-    "test:watch": "jest --watch",
+    "test:watch": "jest --watch --detectOpenHandles",
     "test:ci": "yarn run lint && yarn test"
   },
   "repository": "git@github.com:wigy/react-interactive-stateful-process.git",
@@ -21,7 +22,8 @@
   "license": "GPL-3.0-only",
   "dependencies": {
     "knex": "^0.95.11",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "ts-opaque": "^3.0.1"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
