--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "/dist"
   ],
   "scripts": {
+    "demo": "ts-node-dev example/server.ts",
     "dev": "tsc -w",
     "build": "rm -rf dist/* && tsc && yarn run doc",
     "doc": "rm -fr doc/* && typedoc --out doc src/index.ts",
@@ -21,13 +22,15 @@
   "author": "Tommi Ronkainen <tommi.ronkainen@gmail.com>",
   "license": "GPL-3.0-only",
   "dependencies": {
-    "@types/clone": "^2.1.1",
     "clone": "^2.1.2",
     "knex": "^0.95.11",
     "pg": "^8.7.1",
+    "express": "^4.17.1",
     "ts-opaque": "^3.0.1"
   },
   "devDependencies": {
+    "@types/clone": "^2.1.1",
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/knex": "^0.16.1",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
@@ -45,6 +48,7 @@
     "eslint-plugin-tsdoc": "^0.2.11",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
+    "ts-node-dev": "^1.1.8",
     "typedoc": "^0.22.6",
     "typescript": "^4.4.4"
   }
