--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   "license": "GPL-3.0-only",
   "dependencies": {
     "clone": "^2.1.2",
+    "express": "^4.17.1",
     "knex": "^0.95.11",
     "pg": "^8.7.1",
-    "express": "^4.17.1",
     "ts-opaque": "^3.0.1"
   },
   "devDependencies": {
@@ -36,6 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "better-docs": "^2.3.2",
+    "cors": "^2.8.5",
     "eslint": "^7.10.0",
     "eslint-config-semistandard": "^15.0.1",
     "eslint-config-standard": "^14.1.1",
