--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "interactive-stateful-process",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "/dist"
