--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "Tommi Ronkainen <tommi.ronkainen@gmail.com>",
   "license": "GPL-3.0-only",
   "dependencies": {
+    "chardet": "^1.4.0",
     "clone": "^2.1.2",
     "express": "^4.17.1",
     "knex": "^0.95.11",
