--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "interactive-stateful-process",
   "version": "1.0.0",
   "main": "dist/src/index.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/src/index.d.ts",
   "files": [
     "/dist"
   ],
