--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "strictNullChecks": true,
         "moduleResolution": "node",
         "declaration": true,
+        "skipLibCheck": true,
         "outDir": "./dist"
     },
     "include": [
