--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "clone": "^2.1.2",
     "csv-parse": "^4.16.3",
     "express": "^4.17.1",
-    "interactive-elements": "^1.0.8",
+    "interactive-elements": "^1.0.9",
     "knex": "^0.95.13",
     "pg": "^8.7.1",
     "ts-opaque": "^3.0.1"
@@ -36,19 +36,19 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/knex": "^0.16.1",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
+    "@typescript-eslint/eslint-plugin": "5.2.0",
+    "@typescript-eslint/parser": "5.2.0",
     "better-docs": "^2.3.2",
     "cors": "^2.8.5",
-    "eslint": "^7.10.0",
+    "eslint": "7.32.0",
     "eslint-config-semistandard": "^15.0.1",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-config-standard": "16.0.2",
+    "eslint-plugin-import": "2.23.0",
     "eslint-plugin-mocha": "^8.0.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-promise": "5.1.0",
     "eslint-plugin-react": "^7.25.0",
-    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-standard": "5.0.0",
     "eslint-plugin-tsdoc": "^0.2.11",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
