--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "clone": "^2.1.2",
     "csv-parse": "^4.16.3",
     "express": "^4.17.1",
-    "interactive-elements": "^1.0.12",
+    "interactive-elements": "^1.0.13",
     "knex": "^0.95.13",
     "pg": "^8.7.1",
     "ts-opaque": "^3.0.1"
@@ -41,15 +41,15 @@
     "better-docs": "^2.3.2",
     "cors": "^2.8.5",
     "eslint": "7.32.0",
-    "eslint-config-semistandard": "^15.0.1",
-    "eslint-config-standard": "16.0.2",
-    "eslint-plugin-import": "2.23.0",
-    "eslint-plugin-mocha": "^8.0.0",
+    "eslint-config-semistandard": "16.0.0",
+    "eslint-config-standard": "16.0.3",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-mocha": "9.0.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "5.1.0",
-    "eslint-plugin-react": "^7.25.0",
+    "eslint-plugin-promise": "5.1.1",
+    "eslint-plugin-react": "7.26.1",
     "eslint-plugin-standard": "5.0.0",
-    "eslint-plugin-tsdoc": "^0.2.11",
+    "eslint-plugin-tsdoc": "0.2.14",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.8",
