--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "demo": "ts-node-dev example/server.ts",
     "dev": "tsc -w",
-    "build": "rm -rf dist/* && tsc && cp -r migrations dist/  && yarn run doc",
+    "build": "rm -rf dist/* && tsc && cp -r migrations dist/",
     "doc": "rm -fr doc/* && typedoc --out doc src/index.ts",
     "doc:watch": "typedoc --watch --out doc src/index.ts",
     "test": "jest --forceExit --detectOpenHandles",
@@ -26,7 +26,7 @@
     "clone": "^2.1.2",
     "csv-parse": "^4.16.3",
     "express": "^4.17.1",
-    "interactive-elements": "^1.0.19",
+    "interactive-elements": "^1.0.20",
     "knex": "^0.95.13",
     "pg": "^8.7.1",
     "ts-opaque": "^3.0.1"
