--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "moduleResolution": "node",
         "declaration": true,
         "skipLibCheck": true,
-        "outDir": "./dist"
+        "outDir": "./dist",
+        "sourceMap": true
     },
     "include": [
         "example/**/*",
