--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "clone": "^2.1.2",
     "csv-parse": "^4.16.3",
     "express": "^4.17.1",
-    "interactive-elements": "1.0.47",
+    "interactive-elements": "1.0.48",
     "knex": "0.95.15",
     "pg": "^8.7.1",
     "ts-opaque": "^3.0.1"
@@ -53,7 +53,7 @@
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.8",
-    "typedoc": "^0.22.6",
+    "typedoc": "0.22.8",
     "typescript": "^4.4.4"
   }
 }
