--- a/package.json
+++ b/package.json
@@ -53,6 +53,6 @@
     "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.8",
     "typedoc": "0.22.8",
-    "typescript": "^4.4.4"
+    "typescript": "4.5.3"
   }
 }
