--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,11 @@
     "sourceType": "module",
     "es6": true
   },
+  "settings": {
+    "react": {
+      "version": "17.0.2"
+    }
+  },
   "rules": {
     "space-before-function-paren": "off",
     "padded-blocks": "off",
