--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "devDependencies": {
     "@types/clone": "^2.1.1",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.0.2",
+    "@types/jest": "27.4.1",
     "@types/knex": "^0.16.1",
     "@typescript-eslint/eslint-plugin": "5.9.1",
     "@typescript-eslint/parser": "5.9.1",
@@ -47,8 +47,8 @@
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-react": "7.27.1",
     "eslint-plugin-standard": "5.0.0",
-    "jest": "^27.3.1",
-    "ts-jest": "^27.0.7",
+    "jest": "27.5.1",
+    "ts-jest": "27.1.4",
     "ts-node-dev": "^1.1.8",
     "typescript": "4.5.5"
   }
