--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "eslint-plugin-standard": "5.0.0",
     "jest": "27.5.1",
     "ts-jest": "27.1.4",
-    "ts-node-dev": "^1.1.8",
+    "ts-node-dev": "2.0.0",
     "typescript": "4.5.5"
   }
 }
