--- a/package.json
+++ b/package.json
@@ -24,6 +24,15 @@
     "chardet": "^1.4.0",
     "clone": "^2.1.2",
     "csv-parse": "^4.16.3",
+    "eslint": "^8.17.0",
+    "eslint-config-semistandard": "^16.0.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-mocha": "^10.0.5",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-standard": "^5.0.0",
     "express": "4.17.2",
     "interactive-elements": "1.0.81",
     "knex": "2.0.0",
@@ -38,15 +47,6 @@
     "@typescript-eslint/eslint-plugin": "5.9.1",
     "@typescript-eslint/parser": "5.9.1",
     "cors": "^2.8.5",
-    "eslint": "7.32.0",
-    "eslint-config-semistandard": "16.0.0",
-    "eslint-config-standard": "16.0.3",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-mocha": "9.0.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "6.0.0",
-    "eslint-plugin-react": "7.27.1",
-    "eslint-plugin-standard": "5.0.0",
     "jest": "27.5.1",
     "ts-jest": "27.1.4",
     "ts-node-dev": "2.0.0",
