--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "@typescript-eslint/parser": "5.9.1",
     "cors": "^2.8.5",
     "jest": "27.5.1",
-    "ts-jest": "27.1.4",
-    "ts-node-dev": "2.0.0",
-    "typescript": "4.7.2"
+    "ts-jest": "^28.0.5",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.3"
   }
 }
