--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "chardet": "^1.4.0",
     "clone": "^2.1.2",
     "csv-parse": "^4.16.3",
-    "eslint": "^8.17.0",
+    "eslint": "8.19.0",
     "eslint-config-semistandard": "^16.0.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
@@ -34,7 +34,7 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-standard": "^5.0.0",
     "express": "4.17.2",
-    "interactive-elements": "1.0.82",
+    "interactive-elements": "1.0.83",
     "knex": "2.0.0",
     "pg": "8.7.3",
     "ts-opaque": "^3.0.1"
