--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   ],
   "scripts": {
     "demo": "ts-node-dev example/server.ts",
-    "dev": "tsc -w",
-    "build": "rm -rf dist/* && tsc && cp -r migrations dist/",
+    "dev": "./make.js --dev",
+    "build": "rm -rf dist/* && ./make.js && tsc --emitDeclarationOnly&& cp -r migrations dist/",
     "doc": "rm -fr doc/* && typedoc --out doc src/index.ts",
     "doc:watch": "typedoc --watch --out doc src/index.ts",
     "lint": "eslint src/*.ts tests/*.ts",
@@ -34,7 +34,7 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-standard": "^5.0.0",
     "express": "4.17.2",
-    "interactive-elements": "1.0.86",
+    "interactive-elements": "1.0.87",
     "knex": "2.0.0",
     "pg": "8.7.3",
     "ts-opaque": "^3.0.1"
@@ -47,6 +47,7 @@
     "@typescript-eslint/eslint-plugin": "5.9.1",
     "@typescript-eslint/parser": "5.9.1",
     "cors": "^2.8.5",
+    "esbuild": "^0.15.5",
     "jest": "^28.1.1",
     "ts-jest": "^28.0.5",
     "ts-node-dev": "^2.0.0",
