--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-standard": "^5.0.0",
     "express": "4.17.2",
-    "interactive-elements": "1.0.89",
+    "interactive-elements": "1.0.90",
     "knex": "2.0.0",
     "pg": "8.7.3",
     "ts-opaque": "^3.0.1"
@@ -51,6 +51,6 @@
     "jest": "^28.1.1",
     "ts-jest": "^28.0.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.3"
+    "typescript": "4.7.4"
   }
 }
