--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "doc:watch": "typedoc --watch --out doc src/index.ts",
     "lint": "eslint src/*.ts tests/*.ts",
     "lint:fix": "eslint --fix src/*.ts tests/*.ts",
+    "test:unit:ci": "jest --clearCache && yarn test:unit",
     "test:unit": "jest --forceExit --detectOpenHandles",
     "test:watch": "jest --watch --forceExit --detectOpenHandles"
   },
