--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
     "chardet": "^1.4.0",
     "clone": "^2.1.2",
     "csv-parse": "^4.16.3",
-    "eslint": "8.19.0",
-    "eslint-config-semistandard": "^16.0.0",
+    "eslint": "8.23.0",
+    "eslint-config-semistandard": "17.0.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-mocha": "^10.0.5",
+    "eslint-plugin-mocha": "10.1.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-promise": "6.0.1",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-standard": "^5.0.0",
     "express": "4.17.2",
-    "interactive-elements": "1.0.95",
+    "interactive-elements": "1.0.96",
     "knex": "2.0.0",
     "node-stdlib-browser": "^1.2.0",
     "pg": "8.7.3",
@@ -46,8 +46,8 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/knex": "^0.16.1",
-    "@typescript-eslint/eslint-plugin": "5.9.1",
-    "@typescript-eslint/parser": "5.9.1",
+    "@typescript-eslint/eslint-plugin": "5.35.1",
+    "@typescript-eslint/parser": "5.35.1",
     "cors": "^2.8.5",
     "esbuild": "^0.15.5",
     "jest": "^28.1.1",
